server fixes + testing setup